modifying project