@@ -1,6 +1,7 @@
 package com.pnimac.auth.config;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -9,6 +10,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -27,7 +29,7 @@ public class SecurityConfig {
 
 	@Autowired
 	private final JwtAuthenticationFilter jwtAuthFilter;
-	
+
 	@Autowired
 	private final CustomUserDetailsService userDetailsService;
 
@@ -45,9 +47,9 @@ public class SecurityConfig {
 	 * We're allowing CORS for the React client running on http://localhost:3000.
 	 * We're disabling CSRF protection as it's typically not needed for stateless JWT authentication.
 	 * Allowing public access to /api/auth/** endpoints (for login/register), and
-	 * requiring authentication for all other requests. 
-	 * Setting the session creation policy to STATELESS since we're using JWTs. 
-	 * Adding a custom JwtAuthenticationFilter before the UsernamePasswordAuthenticationFilter. 
+	 * requiring authentication for all other requests.
+	 * Setting the session creation policy to STATELESS since we're using JWTs.
+	 * Adding a custom JwtAuthenticationFilter before the UsernamePasswordAuthenticationFilter.
 	 * @param http
 	 * @return
 	 * @throws Exception
@@ -55,29 +57,18 @@ public class SecurityConfig {
 
 	@Bean
 	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-	/**	http
-		.cors(cors -> cors
-				.and()
-				.csrf(csrf -> csrf.disable()))
-				.authorizeHttpRequests(authz -> authz
-					.requestMatchers("/api/auth/**").permitAll()
-					.anyRequest().authenticated())
-				.sessionManagement(
-						sessionManagement -> sessionManagement
-							.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-								.and().userDetailsService(userDetailsService)
-								.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class));**/
 		http
-        .cors().and()
-        .csrf().disable()
-        .authorizeRequests(authz -> authz
-            .requestMatchers("/api/auth/**").permitAll()
-            .anyRequest().authenticated()
-        )
-        .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-        .and()
-        .userDetailsService(userDetailsService)
-        .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+				.csrf(AbstractHttpConfigurer::disable)
+				.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+				.authorizeHttpRequests(auth -> auth
+						.requestMatchers("/api/auth/**").permitAll()
+						.anyRequest().authenticated()
+				)
+				.sessionManagement(session -> session
+						.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+				)
+				.userDetailsService(userDetailsService)
+				.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
 		return http.build();
 	}
@@ -94,7 +85,7 @@ public class SecurityConfig {
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // React app's URL
+		configuration.setAllowedOrigins(List.of("http://localhost:3000")); // React app's URL
 		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 		configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
 		configuration.setAllowCredentials(true);
